# Beyond-Chat

./: .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  MOMs.md  README.md  blocker.md  completed.md  env.example  manual.md  plan.md  spec.md  vercel.json
backend/: README.md  env.example  pyproject.toml  requirements.txt  vercel.json
backend/dexter/: package-lock.json  package.json
backend/docs/: product-api-phase5-12.md  product-provider-adapters.md  runtime-streaming-integration.md
backend/sandbox-runner/: env.example  package-lock.json  package.json  tsconfig.json  vercel.json
backend/sql-related-files/: 000_workspace_membership_schema.sql  001_users_workspaces_members.sql  003_artifact_extensions.sql  003_integrations_tables.sql  004_artifacts_runs_steps_base.sql  004_run_extensions.sql  005_rls_policies.sql  005_run_extensions.sql  006_artifact_extensions.sql  006_users_workspaces_members.sql  007_rls_policies.sql  008_storage_setup.sql  009_cleanup_and_fixes.sql  010_reminders_runtime.sql  011_billing.sql  012_security_advisor_hardening.sql  013_usage_events_policy_and_reminders_index.sql  README.md
backend/src/: ai_context.py  artifact_drafts.py  auth.py  billing.py  config.py  dexter_client.py  main.py  providers.py  runtime_store.py  store.py  supabase_service.py  workflows.py
backend/tests/: conftest.py  test_api.py  test_auth_context.py  test_authorization_policy.py  test_automation_lifecycle.py  test_billing_v2.py  test_billing_v2_activation.py  test_capability_gateway_security.py  test_health_pytest.py  test_identity_supabase_repository.py  test_internal_gateway_persistence.py  test_internal_gateways.py  test_membership_admin.py  test_product_api_contract.py  test_product_provider_adapters.py  test_runtime_coordinator.py  test_runtime_phase4c.py  test_runtime_store.py  test_runtime_streaming.py  test_runtime_streaming_postgrest.py  test_runtime_streaming_router.py  test_runtime_worker_orchestration.py  test_workos_identity.py  (+2 more)
(+760 files in other folders)
